add department to cases endpoints response

--- a/notebooks/database.ipynb
+++ b/notebooks/database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "dict_keys(['password', 'dbname', 'engine', 'port', 'dbInstanceIdentifier', 'host', 'username'])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "('PostgreSQL 13.4 on aarch64-unknown-linux-gnu, compiled by gcc (GCC) 7.3.1 20180712 (Red Hat 7.3.1-6), 64-bit',)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,82 +70,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(resultset)=704\n"
+      "syntax error at or near \"mph\"\n",
+      "LINE 7:         mph.total as population,\n",
+      "                ^\n",
+      "\n",
+      "len(resultset)=460\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Montecristo',\n",
-       "  'code': 13458,\n",
-       "  'population': 15415,\n",
-       "  'suicide_attempts': 2,\n",
-       "  'latitude': Decimal('8.29724472765'),\n",
-       "  'longitude': Decimal('-74.4714158637')},\n",
-       " {'name': 'Usiacurí',\n",
-       "  'code': 8849,\n",
-       "  'population': 11713,\n",
-       "  'suicide_attempts': 3,\n",
-       "  'latitude': Decimal('10.742979811'),\n",
-       "  'longitude': Decimal('-74.9769840969')},\n",
-       " {'name': 'Pinchote',\n",
-       "  'code': 68549,\n",
-       "  'population': 5062,\n",
-       "  'suicide_attempts': 1,\n",
-       "  'latitude': Decimal('6.53206093514'),\n",
-       "  'longitude': Decimal('-73.1729190191')},\n",
-       " {'name': 'Malambo',\n",
-       "  'code': 8433,\n",
-       "  'population': 121589,\n",
-       "  'suicide_attempts': 30,\n",
-       "  'latitude': Decimal('10.856822692'),\n",
-       "  'longitude': Decimal('-74.7748637454')},\n",
-       " {'name': 'Guasca',\n",
-       "  'code': 25322,\n",
-       "  'population': 14313,\n",
-       "  'suicide_attempts': 1,\n",
-       "  'latitude': Decimal('4.86671913331'),\n",
-       "  'longitude': Decimal('-73.8771423949')},\n",
-       " {'name': 'Villamaría',\n",
-       "  'code': 17873,\n",
-       "  'population': 62261,\n",
-       "  'suicide_attempts': 36,\n",
-       "  'latitude': Decimal('5.043806686'),\n",
-       "  'longitude': Decimal('-75.513760602')},\n",
-       " {'name': 'Colombia',\n",
-       "  'code': 41206,\n",
-       "  'population': 7427,\n",
-       "  'suicide_attempts': 8,\n",
-       "  'latitude': Decimal('3.37697664839'),\n",
-       "  'longitude': Decimal('-74.8028152505')},\n",
-       " {'name': 'Ventaquemada',\n",
-       "  'code': 15861,\n",
-       "  'population': 15270,\n",
-       "  'suicide_attempts': 5,\n",
-       "  'latitude': Decimal('5.36885763606'),\n",
-       "  'longitude': Decimal('-73.5224525403')},\n",
-       " {'name': 'Marquetalia',\n",
-       "  'code': 17444,\n",
-       "  'population': 13395,\n",
-       "  'suicide_attempts': 8,\n",
-       "  'latitude': Decimal('5.29752541271'),\n",
-       "  'longitude': Decimal('-75.0530937905')},\n",
-       " {'name': 'Puerto Tejada',\n",
-       "  'code': 19573,\n",
-       "  'population': 41209,\n",
-       "  'suicide_attempts': 3,\n",
-       "  'latitude': Decimal('3.23329388435'),\n",
-       "  'longitude': Decimal('-76.4173065509')}]"
+       "[{'municipality_name': 'Medellín',\n",
+       "  'municipality_code': 5001,\n",
+       "  'department_name': 'Antioquia',\n",
+       "  'department_code': 5,\n",
+       "  'population': 2533424,\n",
+       "  'suicides': 173,\n",
+       "  'latitude': Decimal('6.24858636743'),\n",
+       "  'longitude': Decimal('-75.5760017134')},\n",
+       " {'municipality_name': 'Abejorral',\n",
+       "  'municipality_code': 5002,\n",
+       "  'department_name': 'Antioquia',\n",
+       "  'department_code': 5,\n",
+       "  'population': 20287,\n",
+       "  'suicides': 1,\n",
+       "  'latitude': Decimal('5.78930111433'),\n",
+       "  'longitude': Decimal('-75.4287403904')},\n",
+       " {'municipality_name': 'Amagá',\n",
+       "  'municipality_code': 5030,\n",
+       "  'department_name': 'Antioquia',\n",
+       "  'department_code': 5,\n",
+       "  'population': 31283,\n",
+       "  'suicides': 1,\n",
+       "  'latitude': Decimal('6.03880842381'),\n",
+       "  'longitude': Decimal('-75.7019483389')},\n",
+       " {'municipality_name': 'Amalfi',\n",
+       "  'municipality_code': 5031,\n",
+       "  'department_name': 'Antioquia',\n",
+       "  'department_code': 5,\n",
+       "  'population': 27071,\n",
+       "  'suicides': 1,\n",
+       "  'latitude': Decimal('6.90967360478'),\n",
+       "  'longitude': Decimal('-75.0774749239')},\n",
+       " {'municipality_name': 'Andes',\n",
+       "  'municipality_code': 5034,\n",
+       "  'department_name': 'Antioquia',\n",
+       "  'department_code': 5,\n",
+       "  'population': 44199,\n",
+       "  'suicides': 4,\n",
+       "  'latitude': Decimal('5.65676971311'),\n",
+       "  'longitude': Decimal('-75.878794075')},\n",
+       " {'municipality_name': 'Angostura',\n",
+       "  'municipality_code': 5038,\n",
+       "  'department_name': 'Antioquia',\n",
+       "  'department_code': 5,\n",
+       "  'population': 11536,\n",
+       "  'suicides': 1,\n",
+       "  'latitude': Decimal('6.88518441484'),\n",
+       "  'longitude': Decimal('-75.3351091186')},\n",
+       " {'municipality_name': 'Anorí',\n",
+       "  'municipality_code': 5040,\n",
+       "  'department_name': 'Antioquia',\n",
+       "  'department_code': 5,\n",
+       "  'population': 19104,\n",
+       "  'suicides': 1,\n",
+       "  'latitude': Decimal('7.07471004137'),\n",
+       "  'longitude': Decimal('-75.1483449609')},\n",
+       " {'municipality_name': 'Apartadó',\n",
+       "  'municipality_code': 5045,\n",
+       "  'department_name': 'Antioquia',\n",
+       "  'department_code': 5,\n",
+       "  'population': 127744,\n",
+       "  'suicides': 5,\n",
+       "  'latitude': Decimal('7.88325108195'),\n",
+       "  'longitude': Decimal('-76.6258909217')},\n",
+       " {'municipality_name': 'Arboletes',\n",
+       "  'municipality_code': 5051,\n",
+       "  'department_name': 'Antioquia',\n",
+       "  'department_code': 5,\n",
+       "  'population': 30510,\n",
+       "  'suicides': 2,\n",
+       "  'latitude': Decimal('8.84991827334'),\n",
+       "  'longitude': Decimal('-76.4266581639')},\n",
+       " {'municipality_name': 'Armenia',\n",
+       "  'municipality_code': 5059,\n",
+       "  'department_name': 'Antioquia',\n",
+       "  'department_code': 5,\n",
+       "  'population': 5074,\n",
+       "  'suicides': 2,\n",
+       "  'latitude': Decimal('6.15567240561'),\n",
+       "  'longitude': Decimal('-75.7866245369')}]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,8 +179,10 @@
     "\n",
     "query = \"\"\"--sql\n",
     "    SELECT \n",
-    "        m.name as name,\n",
-    "        m.code as code,\n",
+    "        m.name as municipality_name,\n",
+    "        m.code as municipality_code,\n",
+    "        d.name as department_name,\n",
+    "        d.code as department_code,\n",
     "        mph.total as population,\n",
     "        sum(sa.count) as suicide_attempts,\n",
     "        CASE\n",
@@ -168,18 +194,26 @@
     "            ELSE m.longitude\n",
     "        END AS longitude\n",
     "    FROM suicideAttempts sa\n",
-    "    JOIN municipalities m \n",
+    "    JOIN municipality m\n",
     "        ON sa.municipality_id = m.code\n",
+    "    JOIN departments d\n",
+    "        ON m.department_id = d.code\n",
     "    JOIN municipalityPopulationHistory mph \n",
     "        ON sa.municipality_id = mph.municipality_id AND sa.year = mph.year\n",
-    "    WHERE sa.year = 2016\n",
-    "    GROUP BY \n",
-    "        name, code, population\n",
-    "\"\"\"\n",
+    "    WHERE sa.year = %s\n",
+    "    GROUP BY\n",
+    "        municipality_name,\n",
+    "        municipality_code,\n",
+    "        department_name,\n",
+    "        department_code,\n",
+    "        population\n",
+    "    \"\"\"\n",
+    "\n",
+    "values = [2020]\n",
     "\n",
     "try:\n",
     "    cursor = conn.cursor(cursor_factory=RealDictCursor)\n",
-    "    cursor.execute(query)\n",
+    "    cursor.execute(query, values)\n",
     "    res = cursor.fetchall()\n",
     "    conn.commit()\n",
     "except Exception as e:\n",
