add predict service

--- a/notebooks/database.ipynb
+++ b/notebooks/database.ipynb
@@ -70,18 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "syntax error at or near \"mph\"\n",
-      "LINE 7:         mph.total as population,\n",
-      "                ^\n",
-      "\n",
-      "len(resultset)=460\n"
+      "len(resultset)=787\n"
      ]
     },
     {
@@ -92,7 +88,7 @@
        "  'department_name': 'Antioquia',\n",
        "  'department_code': 5,\n",
        "  'population': 2533424,\n",
-       "  'suicides': 173,\n",
+       "  'suicide_attempts': 1948,\n",
        "  'latitude': Decimal('6.24858636743'),\n",
        "  'longitude': Decimal('-75.5760017134')},\n",
        " {'municipality_name': 'Abejorral',\n",
@@ -100,15 +96,31 @@
        "  'department_name': 'Antioquia',\n",
        "  'department_code': 5,\n",
        "  'population': 20287,\n",
-       "  'suicides': 1,\n",
+       "  'suicide_attempts': 33,\n",
        "  'latitude': Decimal('5.78930111433'),\n",
        "  'longitude': Decimal('-75.4287403904')},\n",
+       " {'municipality_name': 'Abriaquí',\n",
+       "  'municipality_code': 5004,\n",
+       "  'department_name': 'Antioquia',\n",
+       "  'department_code': 5,\n",
+       "  'population': 2735,\n",
+       "  'suicide_attempts': 1,\n",
+       "  'latitude': Decimal('6.63228195504'),\n",
+       "  'longitude': Decimal('-76.0642948678')},\n",
+       " {'municipality_name': 'Alejandría',\n",
+       "  'municipality_code': 5021,\n",
+       "  'department_name': 'Antioquia',\n",
+       "  'department_code': 5,\n",
+       "  'population': 4698,\n",
+       "  'suicide_attempts': 2,\n",
+       "  'latitude': Decimal('6.37606264274'),\n",
+       "  'longitude': Decimal('-75.141334501')},\n",
        " {'municipality_name': 'Amagá',\n",
        "  'municipality_code': 5030,\n",
        "  'department_name': 'Antioquia',\n",
        "  'department_code': 5,\n",
        "  'population': 31283,\n",
-       "  'suicides': 1,\n",
+       "  'suicide_attempts': 10,\n",
        "  'latitude': Decimal('6.03880842381'),\n",
        "  'longitude': Decimal('-75.7019483389')},\n",
        " {'municipality_name': 'Amalfi',\n",
@@ -116,7 +128,7 @@
        "  'department_name': 'Antioquia',\n",
        "  'department_code': 5,\n",
        "  'population': 27071,\n",
-       "  'suicides': 1,\n",
+       "  'suicide_attempts': 19,\n",
        "  'latitude': Decimal('6.90967360478'),\n",
        "  'longitude': Decimal('-75.0774749239')},\n",
        " {'municipality_name': 'Andes',\n",
@@ -124,15 +136,23 @@
        "  'department_name': 'Antioquia',\n",
        "  'department_code': 5,\n",
        "  'population': 44199,\n",
-       "  'suicides': 4,\n",
+       "  'suicide_attempts': 25,\n",
        "  'latitude': Decimal('5.65676971311'),\n",
        "  'longitude': Decimal('-75.878794075')},\n",
+       " {'municipality_name': 'Angelópolis',\n",
+       "  'municipality_code': 5036,\n",
+       "  'department_name': 'Antioquia',\n",
+       "  'department_code': 5,\n",
+       "  'population': 5841,\n",
+       "  'suicide_attempts': 4,\n",
+       "  'latitude': Decimal('6.10961277767'),\n",
+       "  'longitude': Decimal('-75.7113533837')},\n",
        " {'municipality_name': 'Angostura',\n",
        "  'municipality_code': 5038,\n",
        "  'department_name': 'Antioquia',\n",
        "  'department_code': 5,\n",
        "  'population': 11536,\n",
-       "  'suicides': 1,\n",
+       "  'suicide_attempts': 15,\n",
        "  'latitude': Decimal('6.88518441484'),\n",
        "  'longitude': Decimal('-75.3351091186')},\n",
        " {'municipality_name': 'Anorí',\n",
@@ -140,36 +160,12 @@
        "  'department_name': 'Antioquia',\n",
        "  'department_code': 5,\n",
        "  'population': 19104,\n",
-       "  'suicides': 1,\n",
+       "  'suicide_attempts': 12,\n",
        "  'latitude': Decimal('7.07471004137'),\n",
-       "  'longitude': Decimal('-75.1483449609')},\n",
-       " {'municipality_name': 'Apartadó',\n",
-       "  'municipality_code': 5045,\n",
-       "  'department_name': 'Antioquia',\n",
-       "  'department_code': 5,\n",
-       "  'population': 127744,\n",
-       "  'suicides': 5,\n",
-       "  'latitude': Decimal('7.88325108195'),\n",
-       "  'longitude': Decimal('-76.6258909217')},\n",
-       " {'municipality_name': 'Arboletes',\n",
-       "  'municipality_code': 5051,\n",
-       "  'department_name': 'Antioquia',\n",
-       "  'department_code': 5,\n",
-       "  'population': 30510,\n",
-       "  'suicides': 2,\n",
-       "  'latitude': Decimal('8.84991827334'),\n",
-       "  'longitude': Decimal('-76.4266581639')},\n",
-       " {'municipality_name': 'Armenia',\n",
-       "  'municipality_code': 5059,\n",
-       "  'department_name': 'Antioquia',\n",
-       "  'department_code': 5,\n",
-       "  'population': 5074,\n",
-       "  'suicides': 2,\n",
-       "  'latitude': Decimal('6.15567240561'),\n",
-       "  'longitude': Decimal('-75.7866245369')}]"
+       "  'longitude': Decimal('-75.1483449609')}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +190,7 @@
     "            ELSE m.longitude\n",
     "        END AS longitude\n",
     "    FROM suicideAttempts sa\n",
-    "    JOIN municipality m\n",
+    "    JOIN municipalities m\n",
     "        ON sa.municipality_id = m.code\n",
     "    JOIN departments d\n",
     "        ON m.department_id = d.code\n",
